--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "next": "16.1.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "lucide-react": "^0.474.0",
+    "framer-motion": "^12.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
